# advent-of-code-2025

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: compiler_warnings.cmake
src/: main.cpp
src/solutions/: all.h
src/solutions/day_1/: day_1.cpp  day_1.h
src/solutions/day_10/: day_10.cpp  day_10.h
src/solutions/day_11/: day_11.cpp  day_11.h
src/solutions/day_12/: day_12.cpp  day_12.h
src/solutions/day_2/: day_2.cpp  day_2.h
src/solutions/day_3/: day_3.cpp  day_3.h
src/solutions/day_4/: day_4.cpp  day_4.h
src/solutions/day_5/: day_5.cpp  day_5.h
src/solutions/day_6/: day_6.cpp  day_6.h
src/solutions/day_7/: day_7.cpp  day_7.h
src/solutions/day_8/: day_8.cpp  day_8.h  disjoint_set.cpp  disjoint_set.h
src/solutions/day_9/: aabb.h  day_9.cpp  day_9.h
src/utility/: day.cpp  day.h  io.cpp  io.h  math.h  string.cpp  string.h  utility.h  vec.h
